@@ -9,31 +9,32 @@
 
 defined('_JEXEC') or die;
 ?>
-<?php if (JPluginHelper::isEnabled('user', 'profile')) : ?>
-<div class="contact-profile">
-	<ol>
-	<?php foreach ($this->contact->profile as $profile) :
-		if ($profile->profile_value) :
+<?php if (JPluginHelper::isEnabled('user', 'profile')) :
+	$fields = $this->item->profile->getFieldset('profile'); ?>
+<div class="contact-profile" id="users-profile-custom">
+	<dl>
+	<?php foreach ($fields as $profile) :
+		if ($profile->value) : 
+			echo '<dt>'.$profile->label.'</dt>';
+			$profile->text = htmlspecialchars($profile->value, ENT_COMPAT, 'UTF-8');
 
-			$profile->text = htmlspecialchars($profile->profile_value, ENT_COMPAT, 'UTF-8');
-
-			switch ($profile->profile_key) :
-				case "profile.website":
+			switch ($profile->id) :
+				case "profile_website":
 					$v_http = substr ($profile->profile_value, 0, 4);
 
 					if ($v_http == "http") :
-						echo '<li><a href="'.$profile->text.'">'.$profile->text.'</a></li>';
+						echo '<dd><a href="'.$profile->text.'">'.$profile->text.'</a></dd>';
 					else :
-						echo '<li><a href="http://'.$profile->text.'">'.$profile->text.'</a></li>';
+						echo '<dd><a href="http://'.$profile->text.'">'.$profile->text.'</a></dd>';
 					endif;
 					break;
 
 				default:
-					echo '<li>'.$profile->text.'</li>';
+					echo '<dd>'.$profile->text.'</dd>';
 					break;
 			endswitch;
 		endif;
 	endforeach; ?>
-	</ol>
+	</dl>
 </div>
 <?php endif; ?>
