@@ -36,6 +36,7 @@ $ -> Language fix or change
  # [#21300] Problem with Options Lightbox and Sessions (Omar Ramos)
  # [#22935] Automatic site language change when a user change its frontend language
  # [#22535] Missing always fulltext value in com_content article view (second time)
+ # [#21399] user profile fields have numbering instead of filed names (Elin Waring, Mathavan Jeyadev)
 
 20-Oct-2010 Andrew Eddie
  # Fixed issue [#22251] params field in table #__template_styles too small (Jason D'Souza, Bill Richardson, Christophe Demko).
